@@ -1,4 +1,12 @@
 
+2006-08-22 (REL_0_81) Christian Walter <wolti@sil.at>
+ Notes: Added porting guide
+
+ Detailed notes:
+   - OTHER: Added a new porting guide to the documentation.
+   - OTHER: Added a empty example for new ports to the project as a 
+       starting point.
+
 2006-08-01 (REL_0_8) Christian Walter <wolti@sil.at>
  Notes: Added Linux RTU/ASCII port.
 
